add ip greeting

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
     <title>Alex Staninger</title>
 </head>
 <body>
-    <header> Alex Staninger</header>
+    <header>Hello, {{ ip }}
+    <header>Alex Staninger</header>
 </body>
 </html>
