added projects route

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@
 {% extends "bootstrap/base.html" %}
 
 {% block navbar %}
+{{ super() }}
 <div class="navbar navbar-inverse navbar-fixed" role="navigation">
     <div class="container">
         <div class="navbar-header">
