--- a/templates/index.html
+++ b/templates/index.html
@@ -1,46 +1,63 @@
 {% extends "bootstrap/base.html" %}
 {% block html_attribs %} lang='en' {% endblock html_attribs %}
 
+{%- block head %}
+{{ super() }}
+<link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}"
+    type="image/x-icon">
+
 {%- block metas %}
 {{ super() }}
-<meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
+<meta http-equiv="content-type" content="text/html; charset=utf-8"/>
 <meta maximum-scale=1.0"/>
 {%- endblock metas %}
+{%- endblock %}
 
 {% block title %}Alex Staninger{% endblock %}
 
+{% block body %}
 {% block navbar %}
 <div class="navbar navbar-inverse navbar-fixed" role="navigation">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle"
-             data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="/">Alex Staninger</a>
-        </div>
-        <div class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-                <li><a href="/">about</a></li>
-                <li><a href="/projects">projects</a></li>
-                <li><a href="/resume">resume</a></li>
-            </ul>
-        </div>
-    </div>
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle"
+      data-toggle="collapse" data-target=".navbar-collapse">
+      <span class="sr-only">Toggle navigation</span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+    </button>
+    <a class="navbar-brand" href="/">Alex Staninger</a>
+  </div>
+  <div class="navbar-collapse collapse">
+    <ul class="nav navbar-nav">
+      <li><a href="/">about</a></li>
+      <li><a href="/projects">projects</a></li>
+      <li><a href="/resume">resume</a></li>
+    </ul>
+  </div>
 </div>
-{% endblock %}
+</div>
+{%- endblock navbar %}
+
 
 {% block content %}
 <div class="container">
-    <div class="page-header">
-        <h3>About Me</h3>
-    </div>
-    <div class='bio'>
-        <p> Hello {{ ip }}, I am an recent (August 2018) UC San Diego graduate with a BS in Math-Computer Science. </p>
-        <p>I am actively seeking a software development role. </p>
-    </div>
+  <div class="page-header">
+    <h3>About Me</h3>
+  </div>
+  <div class="bio">
+    <p> Hello {{ ip }}, I am an recent (August 2018) UC San Diego graduate with a BS in Math-Computer Science. </p>
+    <p>I am actively seeking a software development role. </p>
+  </div>
 </div>
-{% endblock %}
+{%- endblock content%}
+
+<div class="footer" style="width:42px;height:42px;border:0;"> 
+  <a href="mailto:alex.staninger@gmail.com" target="_blank"> <img src="/static/gmail.svg" alt="Email icon."> </a>
+  <a href="https://github.com/astaninger" target="_blank"> <img src="/static/github.svg" alt="Github icon."> </a>
+  <a href="https://linkedin.com/in/alexestaninger" target="_blank"> <img src="/static/linkedin.svg" alt="Linkedin icon."></a>
+  <a href="https://twitter.com/alex_staninger" target="_blank"s> <img src="static/twitter.svg" alt="Twitter icon."> </a>
+</div>
+
+{%- endblock body%}
