--- a/templates/projects.html
+++ b/templates/projects.html
@@ -5,7 +5,9 @@
     <div class="page-header">
         <h3>Projects</h3>
     </div>
-    <div class='bio'>
+    <div class='blurb'>
     </div>
 </div>
+
+<div class="conatiner">
 {% endblock %}
