--- a/templates/projects.html
+++ b/templates/projects.html
@@ -2,12 +2,14 @@
 
 {% block content %}
 <div class="container">
-    <div class="page-header">
-        <h3>Projects</h3>
-    </div>
-    <div class='blurb'>
-    </div>
+  <div class="page-header">
+    <h3>Projects</h3>
+  </div>
+  <div class='blurb'>
+  </div>
 </div>
 
 <div class="conatiner">
-{% endblock %}
+  <div class='project-name'>
+    <
+    {% endblock %}
