--- a/templates/index.html
+++ b/templates/index.html
@@ -11,33 +11,39 @@ type="image/x-icon">
 <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
 <meta maximum-scale=1.0"/>
 {%- endblock metas %}
-{%- endblock %}
+
+{%- block styles %}
+{{ super() }}
+<link href='static/styles.css' rel='stylesheet'>
+{%- endblock styles %}
+
+{%- endblock head%}
 
 {% block title %}Alex Staninger{% endblock %}
 
 {% block body %}
 {% block navbar %}
-<div class="navbar navbar-inverse navbar-fixed" role="navigation">
-  <div class="container">
+<nav class="navbar navbar-inverse navbar-fixed-top">
+  <div class="container-fluid">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle"
-      data-toggle="collapse" data-target=".navbar-collapse">
-      <span class="sr-only">Toggle navigation</span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-    </button>
-    <a class="navbar-brand" href="/">Alex Staninger</a>
+      <button type='button' class="navbar-toggle collapsed" data-toggle="collapse" data-target="#myNavbar">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="/">Alex Staninger</a>
+    </div>
+    <div class="collapse navbar-collapse" id='myNavbar'>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="/">about</a></li>
+        <li><a href="/projects">projects</a></li>
+        <li><a href="/resume">resume</a></li>
+      </ul>
+    </div>
   </div>
-  <div class="navbar-collapse collapse">
-    <ul class="nav navbar-nav">
-      <li><a href="/">about</a></li>
-      <li><a href="/projects">projects</a></li>
-      <li><a href="/resume">resume</a></li>
-    </ul>
-  </div>
-</div>
-</div>
+</nav>
+
 {%- endblock navbar %}
 
 
@@ -47,17 +53,31 @@ type="image/x-icon">
     <h3>About Me</h3>
   </div>
   <div class="bio">
-    <p> Hello {{ ip }}, I am an recent (August 2018) UC San Diego graduate with a BS in Math-Computer Science. </p>
+    <p> Hello {{ ip }}, I am a recent (August 2018) UC San Diego graduate with a BS in Math-Computer Science. </p>
     <p>I am actively seeking a software development role. </p>
   </div>
 </div>
+
 {%- endblock content%}
 
-<div class="footer" style="width:42px;height:42px;border:0;"> 
-  <a href="mailto:alex.staninger@gmail.com" target="_blank"> <img src="/static/gmail.svg" alt="Email icon."> </a>
-  <a href="https://github.com/astaninger" target="_blank"> <img src="/static/github.svg" alt="Github icon."> </a>
-  <a href="https://linkedin.com/in/alexestaninger" target="_blank"> <img src="/static/linkedin.svg" alt="Linkedin icon."></a>
-  <a href="https://twitter.com/alex_staninger" target="_blank"s> <img src="static/twitter.svg" alt="Twitter icon."> </a>
-</div>
+{% block scripts %}
+{{ super() }}
+{% endblock scripts%}
 
+<div class="container">
+  <footer class="row"> 
+    <div class='col-md-3'>
+      <a href="mailto:alex.staninger@gmail.com" target="_blank"> <img src="/static/gmail.svg" alt="Email icon."> </a>
+    </div>
+    <div class='col-md-3'>
+      <a href="https://github.com/astaninger" target="_blank"> <img src="/static/github.svg" alt="Github icon."> </a>
+    </div>
+    <div class='col-md-3'>
+      <a href="https://linkedin.com/in/alexestaninger" target="_blank"> <img src="/static/linkedin.svg" alt="Linkedin icon."></a>
+    </div>
+    <div class='col-md-3'>
+      <a href="https://twitter.com/alex_staninger" target="_blank"s> <img src="static/twitter.svg" alt="Twitter icon."> </a>
+    </div>
+  </footer>
+</div>
 {%- endblock body%}
