--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@ type="image/x-icon">
       <a class="navbar-brand" href="/">Alex Staninger</a>
     </div>
     <div class="collapse navbar-collapse" id='myNavbar'>
-      <ul class="nav navbar-nav navbar-right">
+      <ul class="nav navbar-nav">
         <li><a href="/">about</a></li>
         <li><a href="/projects">projects</a></li>
         <li><a href="/resume">resume</a></li>
