--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@ type="image/x-icon">
       </button>
       <a class="navbar-brand" href="/">Alex Staninger</a>
     </div>
-    <div class="collapse navbar-collapse" id='myNavbar'>
+    <div class="collapse navbar-collapse navbar-right" id='myNavbar'>
       <ul class="nav navbar-nav">
         <li><a href="/">about</a></li>
         <li><a href="/projects">projects</a></li>
@@ -67,9 +67,12 @@ type="image/x-icon">
 <div class="container">
   <footer class="row"> 
     <div class='col-md-3'>
-      <a href="mailto:alex.staninger@gmail.com" target="_blank"> <img src="/static/gmail.svg" alt="Email icon."> </a>
+      <a href="mailto:alex.staninger@gmail.com" target="_blank"> <img src="/static/gmail.svg" alt="Email icon." height=25 width=25> </a>
+      <a href="https://github.com/astaninger" target="_blank"> <img src="/static/github.svg" alt="Github icon." height=25 width=25> </a>
+      <a href="https://linkedin.com/in/alexestaninger" target="_blank"> <img src="/static/linkedin.svg" alt="Linkedin icon." height=25 width=25></a>
+      <a href="https://twitter.com/alex_staninger" target="_blank"s> <img src="static/twitter.svg" alt="Twitter icon." height=25 width=25> </a>
     </div>
-    <div class='col-md-3'>
+<!--     <div class='col-md-3'>
       <a href="https://github.com/astaninger" target="_blank"> <img src="/static/github.svg" alt="Github icon."> </a>
     </div>
     <div class='col-md-3'>
@@ -77,7 +80,7 @@ type="image/x-icon">
     </div>
     <div class='col-md-3'>
       <a href="https://twitter.com/alex_staninger" target="_blank"s> <img src="static/twitter.svg" alt="Twitter icon."> </a>
-    </div>
+    </div> -->
   </footer>
 </div>
 {%- endblock body%}
