--- a/templates/projects.html
+++ b/templates/projects.html
@@ -12,7 +12,7 @@
 <div class="container">
   <div class="row">
     <div class='project-name col-md-2'>
-      <h4><a href='https://www.github.com/astaninger/genmatch' target='_blank'>GenMatch</a></h4>
+      <h4><a href='http://genmatch.tech' target='_blank'>GenMatch</a></h4>
     </div>
     <img class='col-md-6' src='/static/genmatch.jpg' alt='GenMatch'>
     <div class='blurb col-md-4'>
@@ -20,6 +20,8 @@
           Using Python, designed and implemented a web application using Flask and the Twilio API that allows users to video chat and message people with different and similar genes from their own using the Genome Link API.
   Used the DocuSign API for written permission to use their genes ethically and Flask-SocketIO to handle Twilio
         </p>
+      <a href='https://github.com/ishanley/GenMatch' target='_blank'>Github</a><br>
+      <a href='https://devpost.com/software/genmatch' target='_blank'>Devpost</a><br>
     </div>
   </div>
 </div>
