add links speakout

--- a/templates/projects.html
+++ b/templates/projects.html
@@ -30,7 +30,7 @@
 <div class="container">
   <div class='row'>
     <div class='project-name col-md-2'>
-      <h4><a href='https://www.github.com/astaninger/speakout' target='_blank'>SpeakOut</a></h4>
+      <h4><a href='https://speakout1.herokuapp.com' target='_blank'>SpeakOut</a></h4>
     </div>
     <img class='col-md-6' src='' alt='SpeakOut'>
     <div class='blurb col-md-4'>
@@ -40,6 +40,8 @@
   inform others.
   Used MongoDB to store user data and used Flask-SocketIO to update maps in real-time.
       </p>
+      <a href='https://www.github.com/astaninger/speakout' target='_blank'>Github</a><br>
+      <a href='https://devpost.com/software/speakout-56zum9' target='_blank'>Devpost</a>
     </div>
   </div>
 </div>
