fix links planet forest landing

--- a/templates/projects.html
+++ b/templates/projects.html
@@ -62,6 +62,9 @@
   With a team, implemented procedurally generated terrain, procedurally generated forest using L-systems, toon shading,
   linear fog, and added sound effects using the Irrklang and OpenGL API
       </p>
+      <a href='https://cse167finalprojectfall17.blogspot.com/2017/11/blog-entry-1.html' target='_blank'>Blog Entry 1</a>
+      <a href='https://cse167finalprojectfall17.blogspot.com/2017/12/blog-entry-2.html'
+      target='_blank'>Blog Entry 2</a>
     </div>
   </div>
 </div>
@@ -72,7 +75,9 @@
     <div class='project-name col-md-2'>
       <h4><a href='https://github.com/astaninger/Pollcial' target='_blank'>Pollcial</a></h4>
     </div>
-    <img class='col-md-6' src='static/poll.png' alt='Pollcial' height=100 width=100>
+    <div class='col-md-6'>
+      <img  src='static/poll.png' alt='Pollcial' height=100 width=100>
+    </div>
     <div class='blurb col-md-4'>
       <p>
         Using Java and XML, designed a mobile application using Android Studio that allows people to create and vote on
