add social icons to navbar

--- a/templates/index.html
+++ b/templates/index.html
@@ -34,8 +34,14 @@ type="image/x-icon">
       </button>
       <a class="navbar-brand" href="/">Alex Staninger</a>
     </div>
-    <div class="collapse navbar-collapse navbar-right" id='myNavbar'>
+    <div class="collapse navbar-collapse" id='myNavbar'>
       <ul class="nav navbar-nav">
+        <li><a href="mailto:alex.staninger@gmail.com" target="_blank"> <img src="/static/gmail.svg" alt="Email icon." height=25 width=25> </a></li>
+        <li><a href="https://github.com/astaninger" target="_blank"> <img src="/static/github.svg" alt="Github icon." height=25 width=25> </a></li>
+        <li><a href="https://linkedin.com/in/alexestaninger" target="_blank"> <img src="/static/linkedin.svg" alt="Linkedin icon." height=25 width=25></a></li>
+        <li><a href="https://twitter.com/alex_staninger" target="_blank"s> <img src="static/twitter.svg" alt="Twitter icon." height=25 width=25> </a></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
         <li><a href="/">about</a></li>
         <li><a href="/projects">projects</a></li>
         <li><a href="/resume">resume</a></li>
