--- a/templates/projects.html
+++ b/templates/projects.html
@@ -62,7 +62,7 @@
   With a team, implemented procedurally generated terrain, procedurally generated forest using L-systems, toon shading,
   linear fog, and added sound effects using the Irrklang and OpenGL API
       </p>
-      <a href='https://cse167finalprojectfall17.blogspot.com/2017/11/blog-entry-1.html' target='_blank'>Blog Entry 1</a> </div>
+      <a href='https://cse167finalprojectfall17.blogspot.com/2017/11/blog-entry-1.html' target='_blank'>Blog Entry 1</a> <br>
       <a href='https://cse167finalprojectfall17.blogspot.com/2017/12/blog-entry-2.html'
       target='_blank'>Blog Entry 2</a>
     </div>
