--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@ type="image/x-icon">
 
 {% block body %}
 {% block navbar %}
-<nav class="navbar navbar-inverse navbar-fixed-top">
+<nav class="navbar navbar-inverse navbar-fixed-top" style='background-color: #0000ff'>
   <div class="container-fluid">
     <div class="navbar-header">
       <button type='button' class="navbar-toggle collapsed" data-toggle="collapse" data-target="#myNavbar">
@@ -36,10 +36,10 @@ type="image/x-icon">
     </div>
     <div class="collapse navbar-collapse" id='myNavbar'>
       <ul class="nav navbar-nav">
-        <li><a href="mailto:alex.staninger@gmail.com" target="_blank"> <img src="/static/gmail.svg" alt="Email icon." height=25 width=25> </a></li>
-        <li><a href="https://github.com/astaninger" target="_blank"> <img src="/static/github.svg" alt="Github icon." height=25 width=25> </a></li>
-        <li><a href="https://linkedin.com/in/alexestaninger" target="_blank"> <img src="/static/linkedin.svg" alt="Linkedin icon." height=25 width=25></a></li>
-        <li><a href="https://twitter.com/alex_staninger" target="_blank"s> <img src="static/twitter.svg" alt="Twitter icon." height=25 width=25> </a></li>
+        <li><a href="mailto:alex.staninger@gmail.com" target="_blank"> <img src="/static/gmail.svg" alt="Email icon." height=20 width=20> </a></li>
+        <li><a href="https://github.com/astaninger" target="_blank"> <img src="/static/github.svg" alt="Github icon." height=20 width=20> </a></li>
+        <li><a href="https://linkedin.com/in/alexestaninger" target="_blank"> <img src="/static/linkedin.svg" alt="Linkedin icon." height=20 width=20></a></li>
+        <li><a href="https://twitter.com/alex_staninger" target="_blank"s> <img src="static/twitter.svg" alt="Twitter icon." height=20 width=20> </a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="/">about</a></li>
@@ -70,23 +70,4 @@ type="image/x-icon">
 {{ super() }}
 {% endblock scripts%}
 
-<div class="container">
-  <footer class="row"> 
-    <div class='col-md-3'>
-      <a href="mailto:alex.staninger@gmail.com" target="_blank"> <img src="/static/gmail.svg" alt="Email icon." height=25 width=25> </a>
-      <a href="https://github.com/astaninger" target="_blank"> <img src="/static/github.svg" alt="Github icon." height=25 width=25> </a>
-      <a href="https://linkedin.com/in/alexestaninger" target="_blank"> <img src="/static/linkedin.svg" alt="Linkedin icon." height=25 width=25></a>
-      <a href="https://twitter.com/alex_staninger" target="_blank"s> <img src="static/twitter.svg" alt="Twitter icon." height=25 width=25> </a>
-    </div>
-<!--     <div class='col-md-3'>
-      <a href="https://github.com/astaninger" target="_blank"> <img src="/static/github.svg" alt="Github icon."> </a>
-    </div>
-    <div class='col-md-3'>
-      <a href="https://linkedin.com/in/alexestaninger" target="_blank"> <img src="/static/linkedin.svg" alt="Linkedin icon."></a>
-    </div>
-    <div class='col-md-3'>
-      <a href="https://twitter.com/alex_staninger" target="_blank"s> <img src="static/twitter.svg" alt="Twitter icon."> </a>
-    </div> -->
-  </footer>
-</div>
 {%- endblock body%}
