--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@ type="image/x-icon">
 {% block body %}
 {% block navbar %}
 <nav class="navbar navbar-inverse navbar-fixed-top" style='background-color: #0000ff'>
-  <div class="container-fluid">
+  <div class="container">
     <div class="navbar-header">
       <button type='button' class="navbar-toggle collapsed" data-toggle="collapse" data-target="#myNavbar">
         <span class="sr-only">Toggle navigation</span>
