resize images and cols

--- a/templates/projects.html
+++ b/templates/projects.html
@@ -14,8 +14,10 @@
     <div class='project-name col-md-2'>
       <h4><a href='http://genmatch.tech' target='_blank'>GenMatch</a></h4>
     </div>
-    <img class='col-md-6' src='/static/genmatch.jpg' alt='GenMatch'>
-    <div class='blurb col-md-4'>
+    <div class='col-md-5'>
+      <img src='/static/genmatch.jpg' alt='GenMatch' height=255 width=420>
+    </div>
+    <div class='blurb col-md-5'>
         <p>
           Using Python, designed and implemented a web application using Flask and the Twilio API that allows users to video chat and message people with different and similar genes from their own using the Genome Link API.
   Used the DocuSign API for written permission to use their genes ethically and Flask-SocketIO to handle Twilio
@@ -32,8 +34,8 @@
     <div class='project-name col-md-2'>
       <h4><a href='https://speakout1.herokuapp.com' target='_blank'>SpeakOut</a></h4>
     </div>
-    <img class='col-md-6' src='' alt='SpeakOut'>
-    <div class='blurb col-md-4'>
+    <img class='col-md-5' src='' alt='SpeakOut'>
+    <div class='blurb col-md-5'>
       <p>
         Using Python, designed and implemented a web application using Flask and the Google Maps API that allows gender,
   racial, sexual orientation minorities to post where they have had negative interactions, generating statistics to better
@@ -52,10 +54,10 @@
     <div class='project-name col-md-2'>
       <h4><a href='https://cse167finalprojectfall17.blogspot.com/' target='_blank'>Planet Forest Landing</a></h4>
     </div>
-    <div class='col-md-6'>
-      <iframe  src='https://www.youtube.com/embed/dhCvJr1ii_E' alt='Planet Forest Landing'></iframe>
+    <div class='col-md-5'>
+      <iframe  src='https://www.youtube.com/embed/dhCvJr1ii_E?modestbranding=1&autohide=1&showinfo=0' alt='Planet Forest Landing' height=255 width=420 frameborder=0 allowfullscreen></iframe>
     </div>
-    <div class='blurb col-md-4'>
+    <div class='blurb col-md-5'>
       <p>
         Using C++, designed and implemented a program using the OpenGL API to view a scene with a rocket ship object and
   a flag made out of Bezier surfaces.
@@ -75,10 +77,10 @@
     <div class='project-name col-md-2'>
       <h4><a href='https://github.com/astaninger/Pollcial' target='_blank'>Pollcial</a></h4>
     </div>
-    <div class='col-md-6'>
+    <div class='col-md-5'>
       <img  src='static/poll.png' alt='Pollcial' height=340 width=200>
     </div>
-    <div class='blurb col-md-4'>
+    <div class='blurb col-md-5'>
       <p>
         Using Java and XML, designed a mobile application using Android Studio that allows people to create and vote on
   polls about decisions they don’t want to make themselves using Firebase to store user information. Worked on a team
