--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@ type="image/x-icon">
 
 {% block body %}
 {% block navbar %}
-<nav class="navbar navbar-inverse navbar-fixed-top" style='background-color: #0000ff'>
+<nav class="navbar navbar-fixed-top" style='background-color: #eeeeee'>
   <div class="container">
     <div class="navbar-header">
       <button type='button' class="navbar-toggle collapsed" data-toggle="collapse" data-target="#myNavbar">
@@ -36,10 +36,10 @@ type="image/x-icon">
     </div>
     <div class="collapse navbar-collapse" id='myNavbar'>
       <ul class="nav navbar-nav">
-        <li><a href="mailto:alex.staninger@gmail.com" target="_blank"> <img src="/static/gmail.svg" alt="Email icon." height=20 width=20> </a></li>
-        <li><a href="https://github.com/astaninger" target="_blank"> <img src="/static/github.svg" alt="Github icon." height=20 width=20> </a></li>
-        <li><a href="https://linkedin.com/in/alexestaninger" target="_blank"> <img src="/static/linkedin.svg" alt="Linkedin icon." height=20 width=20></a></li>
-        <li><a href="https://twitter.com/alex_staninger" target="_blank"s> <img src="static/twitter.svg" alt="Twitter icon." height=20 width=20> </a></li>
+        <li><a href="mailto:alex.staninger@gmail.com" target="_blank"> <img src="/static/gmail.svg" alt="Email icon." height=20 width=20>&nbsp gmail </a></li>
+        <li><a href="https://github.com/astaninger" target="_blank"> <img src="/static/github.svg" alt="Github icon." height=20 width=20> &nbsp github </a></li>
+        <li><a href="https://linkedin.com/in/alexestaninger" target="_blank"> <img src="/static/linkedin.svg" alt="Linkedin icon." height=20 width=20>&nbsp linkedin</a></li>
+        <li><a href="https://twitter.com/alex_staninger" target="_blank"s> <img src="static/twitter.svg" alt="Twitter icon." height=20 width=20> &nbsp twitter </a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="/">about</a></li>
@@ -56,13 +56,17 @@ type="image/x-icon">
 {% block content %}
 <div class="container">
   <div class="page-header">
-    <h3>About Me</h3>
+    <h3>about me</h3>
   </div>
   <div class="bio">
     <p> Hello {{ ip }}, I am a recent (August 2018) UC San Diego graduate with a BS in Math-Computer Science. </p>
     <p>I am actively seeking a software development role. </p>
   </div>
+  <img src='static/me.jpg' alt='selfie' height=200 width=200>
+  <p>I was in a band called <a href='bigbadbuffalo.bandcamp.com' alt=music> Big Bad Buffalo</a></p>
+
 </div>
+
 
 {%- endblock content%}
 
