--- a/templates/projects.html
+++ b/templates/projects.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container">
   <div class="page-header">
-    <h3>Projects</h3>
+    <h3>projects</h3>
   </div>
   <div class='blurb'>
   </div>
