--- a/templates/projects.html
+++ b/templates/projects.html
@@ -15,7 +15,7 @@
       <h4><a href='http://genmatch.tech' target='_blank'>GenMatch</a></h4>
     </div>
     <div class='col-md-5'>
-      <img src='/static/genmatch.jpg' alt='GenMatch' height=255 width=420>
+      <img src='/static/images/genmatch.jpg' alt='GenMatch' height=255 width=420>
     </div>
     <div class='blurb col-md-5'>
         <p>
@@ -34,7 +34,9 @@
     <div class='project-name col-md-2'>
       <h4><a href='https://speakout1.herokuapp.com' target='_blank'>SpeakOut</a></h4>
     </div>
-    <img class='col-md-5' src='' alt='SpeakOut'>
+    <div class='col-md-5'>
+      <img src='/static/images/speakout.png' alt='SpeakOut' height=255 width=420>
+    </div>
     <div class='blurb col-md-5'>
       <p>
         Using Python, designed and implemented a web application using Flask and the Google Maps API that allows gender,
@@ -78,7 +80,7 @@
       <h4><a href='https://github.com/astaninger/Pollcial' target='_blank'>Pollcial</a></h4>
     </div>
     <div class='col-md-5'>
-      <img  src='static/poll.png' alt='Pollcial' height=340 width=200>
+      <img  src='static/images/poll.png' alt='Pollcial' height=340 width=200>
     </div>
     <div class='blurb col-md-5'>
       <p>
