--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@ type="image/x-icon">
 
 {%- block styles %}
 {{ super() }}
-<link href='static/styles.css' rel='stylesheet'>
+<link href='/static/css/styles.css' rel='stylesheet'>
 {%- endblock styles %}
 
 {%- endblock head%}
@@ -36,10 +36,10 @@ type="image/x-icon">
     </div>
     <div class="collapse navbar-collapse" id='myNavbar'>
       <ul class="nav navbar-nav">
-        <li><a href="mailto:alex.staninger@gmail.com" target="_blank"> <img src="/static/gmail.svg" alt="Email icon." height=20 width=20>&nbsp gmail </a></li>
-        <li><a href="https://github.com/astaninger" target="_blank"> <img src="/static/github.svg" alt="Github icon." height=20 width=20> &nbsp github </a></li>
-        <li><a href="https://linkedin.com/in/alexestaninger" target="_blank"> <img src="/static/linkedin.svg" alt="Linkedin icon." height=20 width=20>&nbsp linkedin</a></li>
-        <li><a href="https://twitter.com/alex_staninger" target="_blank"s> <img src="static/twitter.svg" alt="Twitter icon." height=20 width=20> &nbsp twitter </a></li>
+        <li><a href="mailto:alex.staninger@gmail.com" target="_blank"> <img src="/static/images/gmail.svg" alt="Email icon." height=20 width=20>&nbsp gmail </a></li>
+        <li><a href="https://github.com/astaninger" target="_blank"> <img src="/static/images/github.svg" alt="Github icon." height=20 width=20> &nbsp github </a></li>
+        <li><a href="https://linkedin.com/in/alexestaninger" target="_blank"> <img src="/static/images/linkedin.svg" alt="Linkedin icon." height=20 width=20>&nbsp linkedin</a></li>
+        <li><a href="https://twitter.com/alex_staninger" target="_blank"s> <img src="static/images/twitter.svg" alt="Twitter icon." height=20 width=20> &nbsp twitter </a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="/">about</a></li>
@@ -62,7 +62,7 @@ type="image/x-icon">
     <p> Hello {{ ip }}, I am a recent (August 2018) UC San Diego graduate with a BS in Math-Computer Science. </p>
     <p>I am actively seeking a software development role. </p>
   </div>
-  <img src='static/me.jpg' alt='selfie' height=200 width=200>
+  <img src='static/images/me.jpg' alt='selfie' height=200 width=200>
   <p>I was in a band called <a href='bigbadbuffalo.bandcamp.com' alt=music> Big Bad Buffalo</a></p>
 
 </div>
