--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -11,8 +11,10 @@ body {
 
 * {
     font-family: Georgia;
+    font-weight:bold;
 }
 
 .bio p, .blurb p {
     font-family: Helvetica-Neue !important;
+    font-weight:lighter !important;
 }
