--- a/templates/projects.html
+++ b/templates/projects.html
@@ -10,7 +10,7 @@
 </div>
 
 <div class="container">
-  <div class="row">
+  <div class="row vertical-row odd">
     <div class='project-name col-md-2'>
       <h4><a href='http://genmatch.tech' target='_blank'>GenMatch</a></h4>
     </div>
@@ -30,7 +30,7 @@
 <br>
 
 <div class="container">
-  <div class='row'>
+  <div class='row vertical-row even'>
     <div class='project-name col-md-2'>
       <h4><a href='https://speakout1.herokuapp.com' target='_blank'>SpeakOut</a></h4>
     </div>
@@ -52,7 +52,7 @@
 <br>
 
 <div class="container">
-  <div class='row'>
+  <div class='row vertical-row odd'>
     <div class='project-name col-md-2'>
       <h4><a href='https://cse167finalprojectfall17.blogspot.com/' target='_blank'>Planet Forest Landing</a></h4>
     </div>
@@ -75,7 +75,7 @@
 <br>
 
 <div class="container">
-  <div class='row'>
+  <div class='row vertical-row even'>
     <div class='project-name col-md-2'>
       <h4><a href='https://github.com/astaninger/Pollcial' target='_blank'>Pollcial</a></h4>
     </div>
