--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@ type="image/x-icon">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand myName" href="/">Alex Staninger</a>
+      <a class="navbar-brand myName" href="/"><strong>Alex Staninger</strong></a>
     </div>
     <div class="collapse navbar-collapse" id='myNavbar'>
       <ul class="nav navbar-nav">
@@ -57,7 +57,7 @@ type="image/x-icon">
 <div class='component'>
 <div class="container">
   <div class="page-header">
-    <h3>about me</h3>
+    <h3>About Me</h3>
   </div>
   <div class="bio">
     <p> Hello {{ ip }}, I am a recent (August 2018) UC San Diego graduate with a BS in Math-Computer Science. </p>
