--- a/templates/projects.html
+++ b/templates/projects.html
@@ -12,9 +12,9 @@
 <div class="container">
   <div class="row vertical-row odd">
     <div class='project-name col-md-2'>
-      <h4><a href='http://genmatch.tech' target='_blank'>GenMatch</a></h4>
+      <h4 class='text-center'><a href='http://genmatch.tech' target='_blank'>GenMatch</a></h4>
     </div>
-    <div class='col-md-5'>
+    <div class='col-md-5 text-center'>
       <img src='/static/images/genmatch.jpg' alt='GenMatch' height=255 width=420>
     </div>
     <div class='blurb col-md-5'>
@@ -32,9 +32,9 @@
 <div class="container">
   <div class='row vertical-row even'>
     <div class='project-name col-md-2'>
-      <h4><a href='https://speakout1.herokuapp.com' target='_blank'>SpeakOut</a></h4>
+      <h4 class='text-center'><a href='https://speakout1.herokuapp.com' target='_blank'>SpeakOut</a></h4>
     </div>
-    <div class='col-md-5'>
+    <div class='col-md-5  text-center'>
       <img src='/static/images/speakout.png' alt='SpeakOut' height=255 width=420>
     </div>
     <div class='blurb col-md-5'>
@@ -54,9 +54,9 @@
 <div class="container">
   <div class='row vertical-row odd'>
     <div class='project-name col-md-2'>
-      <h4><a href='https://cse167finalprojectfall17.blogspot.com/' target='_blank'>Planet Forest Landing</a></h4>
+      <h4 class='text-center'><a href='https://cse167finalprojectfall17.blogspot.com/' target='_blank'>Planet Forest Landing</a></h4>
     </div>
-    <div class='col-md-5'>
+    <div class='col-md-5 text-center'>
       <iframe  src='https://www.youtube.com/embed/dhCvJr1ii_E?modestbranding=1&autohide=1&showinfo=0' alt='Planet Forest Landing' height=255 width=420 frameborder=0 allowfullscreen></iframe>
     </div>
     <div class='blurb col-md-5'>
@@ -76,11 +76,11 @@
 
 <div class="container">
   <div class='row vertical-row even'>
-    <div class='project-name col-md-2'>
+    <div class='project-name col-md-2 text-center'>
       <h4><a href='https://github.com/astaninger/Pollcial' target='_blank'>Pollcial</a></h4>
     </div>
-    <div class='col-md-5'>
-      <img  src='static/images/poll.png' alt='Pollcial' height=340 width=200>
+    <div class='col-md-5 text-center'>
+      <img src='static/images/poll.png' alt='Pollcial' height=340 width=200>
     </div>
     <div class='blurb col-md-5'>
       <p>
