--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -23,7 +23,6 @@ body {
 .vertical-row {
     display: flex;
     align-items: center;
-    text-align: : center;
 }
 
 .odd {
@@ -32,4 +31,22 @@ body {
 
 .even {
     background-color: #c9ddfc
+}
+
+h4 a {
+    color:black!important;
+}
+
+.page-header{
+    color:black !important
+    font-weight:bolder !important;
+    margin-bottom:0px !important;
+}
+
+strong {
+    font-size: 24px !important;
+}
+
+.blurb a {
+    color:black;
 }
