fix collapse button

--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@ type="image/x-icon">
       </button>
       <a class="navbar-brand myName" href="/"><strong>Alex Staninger</strong></a>
     </div>
-    <div class="collapse navbar-collapse" id='myNavbar'>
+    <div class="navbar-collapse collapse" id='myNavbar'>
       <ul class="nav navbar-nav">
         <li><a href="/">about</a></li>
         <li><a href="/projects">projects</a></li>
