update genmatch link

--- a/templates/projects.html
+++ b/templates/projects.html
@@ -12,7 +12,7 @@
 <div class="container">
   <div class="row vertical-row odd">
     <div class='project-name col-md-2'>
-      <h4 class='text-center'><a href='http://genmatch.tech' target='_blank'>GenMatch</a></h4>
+      <h4 class='text-center'><a href='http://genmatch.herokuapp.com' target='_blank'>GenMatch</a></h4>
     </div>
     <div class='col-md-5 text-center'>
       <img src='/static/images/genmatch.jpg' alt='GenMatch' height=255 width=420>
