--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 
 {%- block head %}
 {{ super() }}
-<link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}"
+<link rel="icon" href="/static/images/favicon.ico"
 type="image/x-icon">
 
 {%- block metas %}
